fix resizing and the bottom being too long

--- a/src/gui/style.css
+++ b/src/gui/style.css
@@ -89,3 +89,11 @@ Slider:focused .thumb{
     -fx-background-color: rgba(0, 0, 0, 0.5); 
     -fx-text-fill: white;
 }
+
+.debug {
+    -fx-background-radius: 5;    
+    -fx-background-color: rgba(255, 0, 0, 0.281); 
+    -fx-border-color: red;
+    -fx-text-fill: white;
+    -fx-border-width: 20;
+}
